--- a/lib/gpu/Makefile.linux
+++ b/lib/gpu/Makefile.linux
@@ -8,7 +8,7 @@
 EXTRAMAKE = Makefile.lammps.standard
 
 ifeq ($(CUDA_HOME),)
-CUDA_HOME = /usr/local/cuda
+CUDA_HOME = /usr/local/cuda-9.0
 endif
 
 NVCC = nvcc
@@ -19,7 +19,8 @@ NVCC = nvcc
 #CUDA_ARCH = -arch=sm_13
 # older CUDA
 #CUDA_ARCH = -arch=sm_10 -DCUDA_PRE_THREE
-CUDA_ARCH = -arch=sm_35
+#CUDA_ARCH = -arch=sm_60
+CUDA_ARCH= -arch=sm_61
 
 # this setting should match LAMMPS Makefile
 # one of LAMMPS_SMALLBIG (default), LAMMPS_BIGBIG and LAMMPS_SMALLSMALL
@@ -31,7 +32,7 @@ LMP_INC = -DLAMMPS_SMALLBIG
 # -D_DOUBLE_DOUBLE  # Double precision for all calculations
 # -D_SINGLE_DOUBLE  # Accumulation of forces, etc. in double
 
-CUDA_PRECISION = -D_SINGLE_DOUBLE
+CUDA_PRECISION = -D_SINGLE_SINGLE
 
 CUDA_INCLUDE = -I$(CUDA_HOME)/include
 CUDA_LIB = -L$(CUDA_HOME)/lib64
