--- a/src/MAKE/MINE/Makefile.gpu_geforce1
+++ b/src/MAKE/MINE/Makefile.gpu_geforce1
@@ -1,4 +1,4 @@
-# gpu_cbp = GPU package, MPI with its default compiler
+# gpu_geforce1 = GPU package, MPI with its default compiler
 
 SHELL = /bin/sh
 
@@ -6,12 +6,14 @@ SHELL = /bin/sh
 # compiler/linker settings
 # specify flags and libraries needed for your compiler
 
-CC =		mpicxx
+OMPI=/home/tjiang/installed/openmpi/3.0.0
+
+CC =		$(OMPI)/bin/mpicxx
 CCFLAGS =	-g -O3 
 SHFLAGS =	-fPIC
 DEPFLAGS =	-M
 
-LINK =		mpicxx
+LINK =		$(OMPI)/bin/mpicxx
 LINKFLAGS =	-g -O
 LIB = 
 SIZE =		size
@@ -39,7 +41,7 @@ LMP_INC =	-DLAMMPS_GZIP
 # PATH = path for MPI library
 # LIB = name of MPI library
 
-MPI_INC =       -I/usr/include/openmpi -DMPICH_SKIP_MPICXX -DOMPI_SKIP_MPICXX=1
+MPI_INC =       -Ii$(OMPI)/include -DMPICH_SKIP_MPICXX -DOMPI_SKIP_MPICXX=1
 MPI_PATH = 
 MPI_LIB =	
 
@@ -50,9 +52,9 @@ MPI_LIB =
 # PATH = path for FFT library
 # LIB = name of FFT library
 
-FFT_INC =       -I/usr/include -DFFT_FFTW3
-FFT_PATH =      -L/usr/lib/x86_64-linux-gnu
-FFT_LIB =       -lfftw3
+FFT_INC =      
+FFT_PATH =    
+FFT_LIB =      
 
 # JPEG and/or PNG library
 # see discussion in Section 2.2 (step 7) of manual
