--- a/lib/gpu/Makefile.cbp
+++ b/lib/gpu/Makefile.cbp
@@ -9,18 +9,15 @@ EXTRAMAKE = Makefile.lammps.standard
 
 ifeq ($(CUDA_HOME),)
 CUDA_HOME = /usr/local/cuda-9.0
+#CUDA_HOME = /usr/local/cuda-10.0
 endif
 
 NVCC = nvcc
 
-# older CUDA
-#CUDA_ARCH = -arch=sm_21
-# newer CUDA
-#CUDA_ARCH = -arch=sm_13
-# older CUDA
-#CUDA_ARCH = -arch=sm_10 -DCUDA_PRE_THREE
+#CUDA_ARCH = -arch=sm_30
 #CUDA_ARCH = -arch=sm_60
-CUDA_ARCH= -arch=sm_61
+CUDA_ARCH = -arch=sm_61
+#CUDA_ARCH = -arch=sm_75
 
 # this setting should match LAMMPS Makefile
 # one of LAMMPS_SMALLBIG (default), LAMMPS_BIGBIG and LAMMPS_SMALLSMALL
@@ -32,7 +29,7 @@ LMP_INC = -DLAMMPS_SMALLBIG
 # -D_DOUBLE_DOUBLE  # Double precision for all calculations
 # -D_SINGLE_DOUBLE  # Accumulation of forces, etc. in double
 
-CUDA_PRECISION = -D_SINGLE_SINGLE
+CUDA_PRECISION = -D_SINGLE_DOUBLE
 
 CUDA_INCLUDE = -I$(CUDA_HOME)/include
 CUDA_LIB = -L$(CUDA_HOME)/lib64
