--- a/lib/colvars/Makefile.deps
+++ b/lib/colvars/Makefile.deps
@@ -1,20 +1,19 @@
 
 $(COLVARS_OBJ_DIR)colvaratoms.o: colvaratoms.cpp colvarmodule.h \
- colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h \
- colvarparse.h colvaratoms.h colvardeps.h
+  colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h \
+  colvarparse.h colvaratoms.h colvardeps.h
 $(COLVARS_OBJ_DIR)colvarbias_abf.o: colvarbias_abf.cpp colvarmodule.h \
- colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h colvar.h \
- colvarparse.h colvardeps.h lepton/include/Lepton.h \
- lepton/include/lepton/CompiledExpression.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/windowsIncludes.h \
- lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/ExpressionProgram.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/Operation.h lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/Exception.h \
- lepton/include/lepton/ParsedExpression.h lepton/include/lepton/Parser.h \
- colvarbias_abf.h colvarbias.h colvargrid.h colvar_UIestimator.h
+  colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h colvar.h \
+  colvarparse.h colvardeps.h lepton/include/Lepton.h \
+  lepton/include/lepton/CompiledExpression.h \
+  lepton/include/lepton/ExpressionTreeNode.h \
+  lepton/include/lepton/windowsIncludes.h \
+  lepton/include/lepton/CustomFunction.h \
+  lepton/include/lepton/ExpressionProgram.h \
+  lepton/include/lepton/Operation.h lepton/include/lepton/Exception.h \
+  lepton/include/lepton/ParsedExpression.h \
+  lepton/include/lepton/Parser.h colvarbias_abf.h colvarbias.h \
+  colvargrid.h colvar_UIestimator.h
 $(COLVARS_OBJ_DIR)colvarbias_alb.o: colvarbias_alb.cpp colvarmodule.h \
   colvars_version.h colvarbias.h colvar.h colvarvalue.h colvartypes.h \
   colvarparse.h colvardeps.h lepton/include/Lepton.h \
@@ -27,57 +26,52 @@ $(COLVARS_OBJ_DIR)colvarbias_alb.o: colvarbias_alb.cpp colvarmodule.h \
   lepton/include/lepton/ParsedExpression.h \
   lepton/include/lepton/Parser.h colvarbias_alb.h
 $(COLVARS_OBJ_DIR)colvarbias.o: colvarbias.cpp colvarmodule.h \
- colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h colvarbias.h \
- colvar.h colvarparse.h colvardeps.h lepton/include/Lepton.h \
- lepton/include/lepton/CompiledExpression.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/windowsIncludes.h \
- lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/ExpressionProgram.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/Operation.h lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/Exception.h \
- lepton/include/lepton/ParsedExpression.h lepton/include/lepton/Parser.h \
- colvargrid.h
+  colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h \
+  colvarbias.h colvar.h colvarparse.h colvardeps.h \
+  lepton/include/Lepton.h lepton/include/lepton/CompiledExpression.h \
+  lepton/include/lepton/ExpressionTreeNode.h \
+  lepton/include/lepton/windowsIncludes.h \
+  lepton/include/lepton/CustomFunction.h \
+  lepton/include/lepton/ExpressionProgram.h \
+  lepton/include/lepton/Operation.h lepton/include/lepton/Exception.h \
+  lepton/include/lepton/ParsedExpression.h \
+  lepton/include/lepton/Parser.h colvargrid.h
 $(COLVARS_OBJ_DIR)colvarbias_histogram.o: colvarbias_histogram.cpp \
- colvarmodule.h colvars_version.h colvarproxy.h colvartypes.h \
- colvarvalue.h colvar.h colvarparse.h colvardeps.h \
- lepton/include/Lepton.h lepton/include/lepton/CompiledExpression.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/windowsIncludes.h \
- lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/ExpressionProgram.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/Operation.h lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/Exception.h \
- lepton/include/lepton/ParsedExpression.h lepton/include/lepton/Parser.h \
- colvarbias_histogram.h colvarbias.h colvargrid.h
+  colvarmodule.h colvars_version.h colvarproxy.h colvartypes.h \
+  colvarvalue.h colvar.h colvarparse.h colvardeps.h \
+  lepton/include/Lepton.h lepton/include/lepton/CompiledExpression.h \
+  lepton/include/lepton/ExpressionTreeNode.h \
+  lepton/include/lepton/windowsIncludes.h \
+  lepton/include/lepton/CustomFunction.h \
+  lepton/include/lepton/ExpressionProgram.h \
+  lepton/include/lepton/Operation.h lepton/include/lepton/Exception.h \
+  lepton/include/lepton/ParsedExpression.h \
+  lepton/include/lepton/Parser.h colvarbias_histogram.h colvarbias.h \
+  colvargrid.h
 $(COLVARS_OBJ_DIR)colvarbias_meta.o: colvarbias_meta.cpp colvarmodule.h \
- colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h colvar.h \
- colvarparse.h colvardeps.h lepton/include/Lepton.h \
- lepton/include/lepton/CompiledExpression.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/windowsIncludes.h \
- lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/ExpressionProgram.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/Operation.h lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/Exception.h \
- lepton/include/lepton/ParsedExpression.h lepton/include/lepton/Parser.h \
- colvarbias_meta.h colvarbias.h colvargrid.h
+  colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h colvar.h \
+  colvarparse.h colvardeps.h lepton/include/Lepton.h \
+  lepton/include/lepton/CompiledExpression.h \
+  lepton/include/lepton/ExpressionTreeNode.h \
+  lepton/include/lepton/windowsIncludes.h \
+  lepton/include/lepton/CustomFunction.h \
+  lepton/include/lepton/ExpressionProgram.h \
+  lepton/include/lepton/Operation.h lepton/include/lepton/Exception.h \
+  lepton/include/lepton/ParsedExpression.h \
+  lepton/include/lepton/Parser.h colvarbias_meta.h colvarbias.h \
+  colvargrid.h
 $(COLVARS_OBJ_DIR)colvarbias_restraint.o: colvarbias_restraint.cpp \
- colvarmodule.h colvars_version.h colvarproxy.h colvartypes.h \
- colvarvalue.h colvarbias_restraint.h colvarbias.h colvar.h colvarparse.h \
- colvardeps.h lepton/include/Lepton.h \
- lepton/include/lepton/CompiledExpression.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/windowsIncludes.h \
- lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/ExpressionProgram.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/Operation.h lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/Exception.h \
- lepton/include/lepton/ParsedExpression.h lepton/include/lepton/Parser.h
+  colvarmodule.h colvars_version.h colvarproxy.h colvartypes.h \
+  colvarvalue.h colvarbias_restraint.h colvarbias.h colvar.h \
+  colvarparse.h colvardeps.h lepton/include/Lepton.h \
+  lepton/include/lepton/CompiledExpression.h \
+  lepton/include/lepton/ExpressionTreeNode.h \
+  lepton/include/lepton/windowsIncludes.h \
+  lepton/include/lepton/CustomFunction.h \
+  lepton/include/lepton/ExpressionProgram.h \
+  lepton/include/lepton/Operation.h lepton/include/lepton/Exception.h \
+  lepton/include/lepton/ParsedExpression.h \
+  lepton/include/lepton/Parser.h
 $(COLVARS_OBJ_DIR)colvarcomp_angles.o: colvarcomp_angles.cpp \
   colvarmodule.h colvars_version.h colvar.h colvarvalue.h colvartypes.h \
   colvarparse.h colvardeps.h lepton/include/Lepton.h \
@@ -161,8 +155,8 @@ $(COLVARS_OBJ_DIR)colvar.o: colvar.cpp colvarmodule.h colvars_version.h \
   lepton/include/lepton/Parser.h colvarcomp.h colvaratoms.h \
   colvarproxy.h colvarscript.h colvarbias.h
 $(COLVARS_OBJ_DIR)colvardeps.o: colvardeps.cpp colvarmodule.h \
- colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h colvardeps.h \
- colvarparse.h
+  colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h \
+  colvardeps.h colvarparse.h
 $(COLVARS_OBJ_DIR)colvargrid.o: colvargrid.cpp colvarmodule.h \
   colvars_version.h colvarvalue.h colvartypes.h colvarparse.h colvar.h \
   colvardeps.h lepton/include/Lepton.h \
@@ -192,18 +186,16 @@ $(COLVARS_OBJ_DIR)colvarmodule.o: colvarmodule.cpp colvarmodule.h \
 $(COLVARS_OBJ_DIR)colvarparse.o: colvarparse.cpp colvarmodule.h \
   colvars_version.h colvarvalue.h colvartypes.h colvarparse.h
 $(COLVARS_OBJ_DIR)colvarproxy.o: colvarproxy.cpp colvarmodule.h \
- colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h \
- colvarscript.h colvarbias.h colvar.h colvarparse.h colvardeps.h \
- lepton/include/Lepton.h lepton/include/lepton/CompiledExpression.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/windowsIncludes.h \
- lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/ExpressionProgram.h \
- lepton/include/lepton/ExpressionTreeNode.h \
- lepton/include/lepton/Operation.h lepton/include/lepton/CustomFunction.h \
- lepton/include/lepton/Exception.h \
- lepton/include/lepton/ParsedExpression.h lepton/include/lepton/Parser.h \
- colvaratoms.h
+  colvars_version.h colvarproxy.h colvartypes.h colvarvalue.h \
+  colvarscript.h colvarbias.h colvar.h colvarparse.h colvardeps.h \
+  lepton/include/Lepton.h lepton/include/lepton/CompiledExpression.h \
+  lepton/include/lepton/ExpressionTreeNode.h \
+  lepton/include/lepton/windowsIncludes.h \
+  lepton/include/lepton/CustomFunction.h \
+  lepton/include/lepton/ExpressionProgram.h \
+  lepton/include/lepton/Operation.h lepton/include/lepton/Exception.h \
+  lepton/include/lepton/ParsedExpression.h \
+  lepton/include/lepton/Parser.h colvaratoms.h
 $(COLVARS_OBJ_DIR)colvarscript.o: colvarscript.cpp colvarscript.h \
   colvarmodule.h colvars_version.h colvarvalue.h colvartypes.h \
   colvarbias.h colvar.h colvarparse.h colvardeps.h \
