--- a/src/MAKE/MINE/Makefile.macosx
+++ b/src/MAKE/MINE/Makefile.macosx
@@ -30,7 +30,7 @@ SHLIBFLAGS =	-shared
 # LAMMPS ifdef settings
 # see possible settings in Section 2.2 (step 4) of manual
 
-LMP_INC =	-DLAMMPS_GZIP -DLAMMPS_EXCEPTIONS
+LMP_INC =	-DLAMMPS_GZIP -DLAMMPS_EXCEPTIONS -DLAMMPS_CXX98
 
 # MPI library
 # see discussion in Section 2.2 (step 5) of manual
